<?xml version="1.0"?>
<package format="3">
  <name>ros_hw_interfaces</name>
  <version>0.0.0</version>
  <description>Interface package for 3-DOF sensor</description>
  <maintainer email="urafiq@jhfletcher.com">urafiq</maintainer>
  <license>MIT</license>

  <!-- Needed to build the interface -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Register this as an interface-generating package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
